--- a/SiteA/DivII/Economics.html
+++ b/SiteA/DivII/Economics.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+      <link href="../css/siteA.css"type="text/css" rel="stylesheet"/>
     <title>Economics</title>
   </head>
   <body id="Economics" class="department">
