--- a/SiteB/DivII/Politics.html
+++ b/SiteB/DivII/Politics.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <link href="../css/siteB.css"type="text/css" rel="stylesheet"/>
     <title>Politics</title>
   </head>
   <body id="Politics" class="department">
