--- a/SiteB/index.html
+++ b/SiteB/index.html
@@ -1,10 +1,11 @@
 <html>
   <head>
+    <link href="css/siteB.css"type="text/css" rel="stylesheet"/>
     <title>Departmental Page</title>
   </head>
   <body id="landing">
     <h1>Departments of Centre College</h1>
-    
+     <img src="../SiteB/pics/AH/centrelogo.jpg">
     <p>Come and see the adventure that awaits you at Centre College.</p>
     
     <ul class="navigation">
