--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
 <head>
+    <link href="../css/siteA.css"type="text/css" rel="stylesheet"/>
+    <link href="../css/siteB.css"type="text/css" rel="stylesheet"/>
 <title>Twin Sites</title>
   </head>
 <body>
