--- a/SiteA/DivI/studioArt.html
+++ b/SiteA/DivI/studioArt.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <link href="../css/siteA.css"type="text/css" rel="stylesheet"/>
     <title>Studio Art</title>
   </head>
   <body id="StudioArt" class="department">
