--- a/SiteA/DivII/Politics.html
+++ b/SiteA/DivII/Politics.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <link href="../css/siteA.css"type="text/css" rel="stylesheet"/>
     <title>Politics</title>
   </head>
   <body id="Politics" class="department">
