--- a/SiteA/DivIII/Mathematics.html
+++ b/SiteA/DivIII/Mathematics.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <link href="../css/siteA.css"type="text/css" rel="stylesheet"/>  
     <title>Mathematics</title>
   </head>
   <body id="Mathematics" class="department">
