--- a/SiteA/index.html
+++ b/SiteA/index.html
@@ -1,10 +1,11 @@
 <html>
   <head>
+    <link href="css/siteA.css"type="text/css" rel="stylesheet"/>
     <title>Departmental Page</title>
   </head>
   <body id="landing">
     <h1>Departments of Centre College</h1>
-    
+    <h2><img src="../SiteA/pics/AH/centre.jpg"></h2> 
     <p>Come and see the adventure that awaits you at Centre College.</p>
     
     <ul class="navigation">
