--- a/SiteB/DivII/Economics.html
+++ b/SiteB/DivII/Economics.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+       <link href="../css/siteB.css"type="text/css" rel="stylesheet"/>
     <title>Economics</title>
   </head>
   <body id="Economics" class="department">
