--- a/SiteB/DivIII/ComputerScience.html
+++ b/SiteB/DivIII/ComputerScience.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <link href="../css/siteB.css"type="text/css" rel="stylesheet"/>
     <title>Computer Science</title>
   </head>
   <body id="ComputerScience" class="department">
