--- a/SiteB/DivIII/Mathematics.html
+++ b/SiteB/DivIII/Mathematics.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+       <link href="../css/siteB.css"type="text/css" rel="stylesheet"/>
     <title>Mathematics</title>
   </head>
   <body id="Mathematics" class="department">
